# slaughterhouse

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: dependencies.cmake  utils.cmake
cmake/dependencies/: boost.cmake  p5-lambda.cmake
cmake/utils/: get_target_namespace.cmake  get_timestamp.cmake  get_version.cmake  include_all.cmake
src/: export.cxx  global.h  main.cxx  main.hxx  singleton.hxx
